2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: update "user interface" description in tests/README
	* tests/README (Subsection "Interpretation"): Mention the "ERROR"
	outcome.
	(Subsection "Getting details from failures"): Don't tell that the
	test scripts can be run directly, this is not 100% true; anymore;
	instead ...
	(Subsection "About the tests"): ... use this new subsection to
	explain how to run the tests (either simple or TAP-based) by hand.
	(Subsection "Supported shells"): Extend to refer to TAP tests too.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: TAP tests can have early plan now
	* tests/defs: When using TAP, allow the user to specify the number
	of tests through the `$planned' variable.
	(trap): Do not print the auto-generated plan if an explicit one
	has already been printed.
	* tests/defs-static.in: Complain and bail out if the `$planned'
	variable is exported in the environment.  Reformat the code to
	facilitate future additions.
	* tests/Makefile.am (TESTS_ENVIRONMENT): Neutralize `$planned'.
	* tests/self-check-env-sanitize.test: Update.
	* tests/ac-output-old.tap: Give an explicit TAP plan, by defining
	`$planned' just before including `./defs'.
	* tests/depmode.tap: Likewise.
	* tests/automake-cmdline.tap: Likewise.
	* tests/tap-bad-prog.tap: Likewise.
	* tests/instspc.tap: Likewise, and related adjustments.
	* tests/add-missing.tap: Make it explicit that we have no a-priori
	plan, and tell why.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: run autogenerated tests with $(LOG_COMPILER) too
	This change enhances consistency in the testsuite.
	* tests/Makefile.am: Some cosmetic reordering, to keep the
	definition of FOO_LOG_COMPILER near to the place where `.foo'
	is added to $(TEST_EXTENSIONS).
	(PTEST_LOG_COMPILER): Run `$(srcdir)/parallel-tests.sh' with
	`$(LOG_COMPILER)', not with `$(SHELL)'.
	(SHTST_LOG_COMPILER): Likewise.
