@@ -257,11 +257,16 @@ for test_name in $test_names_list; do
       && DESTDIR="$dest" file="./$test_string" $MAKE -e test-inst \
       || r='not ok'
 
-    tap_text="$test_name in ${where}dir"
+    description="$test_name in ${where}dir"
     if expected_to_fail "$where" "$test_name"; then
-      tap_text="$tap_text # TODO long-standing limitation"
+      directive=TODO
+      reason="long-standing limitation"
+    else
+      directive=
+      reason=
     fi
-    result_ "$r" "$tap_text" # Test case outcome is here.
+    # Test case outcome is here.
+    result_ "$r" -D "$directive" -r "$reason" -- "$description"
 
     cd "$ocwd" || fatal_ "cannot chdir back to test directory"
 
