@@ -82,6 +82,7 @@ then
 else
   r='not ok'
 fi
-result_ "$r" 'no spurious results # TODO still get "missing plan"'
+result_ "$r" --directive TODO --reason 'still get "missing plan"' \
+            'no spurious results'
 
 :
