@@ -1,5 +1,17 @@
 2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: improve and refactor our custom TAP shell library
+	This change is mostly done in preparation for the next one.
+	* tests/tap-functions.sh (result_with_directive_): Merge into ...
+	(result_): ... this function, which has been greatly extended and
+	improved in various ways.
+	(ok_, not_ok_, skip_, xfail_, xpass_): Adjust.
+	Adjust comments.  Remove an extra empty line.
+	* tests/instspc.tap: Use the new improved interface of `result_'.
+	* tests/tap-bad-prog.tap: Likewise.
+
+2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: update "user interface" description in tests/README
 	* tests/README (Subsection "Interpretation"): Mention the "ERROR"
 	outcome.
